Fixed flex gap issue for older browsers

--- a/src/styles/index-page.css
+++ b/src/styles/index-page.css
@@ -31,8 +31,11 @@
     justify-content: center;
     margin: 80px 0;
     padding: 0 8%;
-    gap: calc(28px + 4%);
     flex-wrap: wrap;
+}
+
+.index-page .inex-page-links a {
+    margin: 0 calc(8px + 2%);
 }
 
 .index-page .display {
@@ -69,10 +72,10 @@
 
     .index-page .inex-page-links a {
         font-size: 25px;
+        margin: 8px;
     }
 
     .index-page .inex-page-links {
         margin: 40px 0;
-        gap: 10px;
     }
 }
